# NetflixPP

./: .gitignore  .~lock.README_professor.docx#  README.md  Utilization_guide.txt  db.py  funciona.txt  hcc_analysis.ipynb  interface.py  package-lock.json  stressTest.html  test_db_connection.py  teste.txt
benchmark/: benchmark_setup.py  pyproject.toml  run_local_benchmark.py  run_vm_single_node_benchmark.py
benchmark/benchmarking_dask/: distributed_dask_benchmark.py  tasks.py
benchmark/benchmarking_joblib/: local_joblib_benchmark.py  tasks.py
benchmark/benchmarking_koalas/: local_koalas_benchmark.py
benchmark/benchmarking_modin/: distributed_modin_benchmark.py
benchmark/benchmarking_spark/: local_spark_benchmark.py  spark_session.py  tasks.py
benchmark/profiles/: dask_local_addition_of_columns.prof.txt  dask_local_complex_arithmetic_ops.prof.txt  dask_local_count_index_length.prof.txt  dask_local_join.prof.txt  dask_local_join_count.prof.txt  dask_local_mean.prof.txt  dask_local_mean_of_columns_addition.prof.txt  dask_local_multiplication_of_columns.prof.txt  dask_local_standard_deviation.prof.txt  dask_local_value_counts.prof.txt  joblib_local_read_file.prof.txt  koalas_local_complex_arithmetic_ops.prof.txt  koalas_local_count.prof.txt  koalas_local_count_index_length.prof.txt  koalas_local_groupby_statistics.prof.txt  koalas_local_mean.prof.txt  koalas_local_mean_of_complex_arithmetic_ops.prof.txt  koalas_local_standard_deviation.prof.txt  koalas_local_value_counts.prof.txt  modin_local_count_index_length.prof.txt  modin_local_groupby_statistics.prof.txt  (+14 more)
(+287 files in other folders)
